testsuite/tests/partial-sigs/should_fail/TidyClash2.stderr

TidyClash2.hs:13:20: error:
    • Found type wildcard ‘_’ standing for ‘_’
      Where: ‘_’ is a rigid type variable bound by
               the inferred type of barry :: _ -> _1 -> t
               at TidyClash2.hs:14:1-40
      To use the inferred type, enable PartialTypeSignatures
    • In the type ‘_ -> _ -> t’
      In the type signature: barry :: forall t. _ -> _ -> t

TidyClash2.hs:13:25: error:
    • Found type wildcard ‘_’ standing for ‘_1’
      Where: ‘_1’ is a rigid type variable bound by
               the inferred type of barry :: _ -> _1 -> t
               at TidyClash2.hs:14:1-40
      To use the inferred type, enable PartialTypeSignatures
    • In the type ‘_ -> _ -> t’
      In the type signature: barry :: forall t. _ -> _ -> t

TidyClash2.hs:14:13: error:
    • Found type wildcard ‘_’ standing for ‘_’
      Where: ‘_’ is a rigid type variable bound by
               the inferred type of barry :: _ -> _1 -> t
               at TidyClash2.hs:14:1-40
      To use the inferred type, enable PartialTypeSignatures
    • In a pattern type signature: _
      In the pattern: x :: _
      In an equation for ‘barry’:
          barry (x :: _) (y :: _) = undefined :: _
    • Relevant bindings include
        barry :: _ -> _1 -> t (bound at TidyClash2.hs:14:1)

TidyClash2.hs:14:22: error:
    • Found type wildcard ‘_’ standing for ‘_1’
      Where: ‘_1’ is a rigid type variable bound by
               the inferred type of barry :: _ -> _1 -> t
               at TidyClash2.hs:14:1-40
      To use the inferred type, enable PartialTypeSignatures
    • In a pattern type signature: _
      In the pattern: y :: _
      In an equation for ‘barry’:
          barry (x :: _) (y :: _) = undefined :: _
    • Relevant bindings include
        x :: _ (bound at TidyClash2.hs:14:8)
        barry :: _ -> _1 -> t (bound at TidyClash2.hs:14:1)

TidyClash2.hs:14:40: error:
    • Found type wildcard ‘_’ standing for ‘_2’
      Where: ‘_2’ is a rigid type variable bound by
               the inferred type of <expression> :: _2
               at TidyClash2.hs:14:40
      To use the inferred type, enable PartialTypeSignatures
    • In an expression type signature: _
      In the expression: undefined :: _
      In an equation for ‘barry’:
          barry (x :: _) (y :: _) = undefined :: _
    • Relevant bindings include
        y :: _1 (bound at TidyClash2.hs:14:17)
        x :: _ (bound at TidyClash2.hs:14:8)
        barry :: _ -> _1 -> t (bound at TidyClash2.hs:14:1)
